--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ authors = ["Emil Roydev e.roydev@gmail.com"]
 description = "Bip39 implementation mnemonic system in rust"
 license = "MIT"
 repository = ""
-homepage = ""
+homepage = "https://github.com/ERoydev/bip39-rusty"
 readme = "README.md"
 keywords = ["bip39", "cryptography", "Bitcoin", "bip39-rust", "bip39-rusty"]
 categories = ["cryptography", "algorithms", "cryptography::cryptocurrencies"]
