--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ edition = "2021"
 authors = ["Emil Roydev e.roydev@gmail.com"]
 description = "Bip39 implementation mnemonic system in rust"
 license = "MIT"
-repository = ""
+repository = "https://github.com/ERoydev/bip39-rusty"
 homepage = "https://github.com/ERoydev/bip39-rusty"
 readme = "README.md"
 keywords = ["bip39", "cryptography", "Bitcoin", "bip39-rust", "bip39-rusty"]
