--- a/.github/workflows/Integration tests.yml
+++ b/.github/workflows/Integration tests.yml
@@ -19,6 +19,9 @@ jobs:
       uses: actions/checkout@v4
     - name: Compile Rust project
       run: cargo build --verbose
+
+    - name: Run the app
+      run: cargo run &
     - name: Run tests
       run: cargo test --verbose
       
